# Dox-Scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
src/: constants.py  main.py
src/core/handlers/: process.py
src/core/jobs/: bot.py  scrape.py
src/handlers/: process.py  threads.py
src/jobs/: bot.py  scrape.py
src/scraper/: README.md  __init__.py  anilist.py  base.py  config.py  converter.py  launch.py  progress.py  scraper.py  utils.py
src/scraper/providers/: anikoto.py  miruro.py
src/shared/: models.py  mongo.py
src/telegram/: bot.py  launch.py
src/telegram/commands/: providers.py  scrape.py  stop.py
src/telegram/handlers/: commands.py
src/telegram/jobs/: run_bot.py  run_uploader.py
src/telegram/utils/: parallel.py
src/tg/: bot.py  constants.py  launch.py
src/tg/commands/: find.py  h_request.py  scrape.py  start.py  stop.py
src/tg/handlers/: commands.py
src/tg/jobs/: run_bot.py  run_uploader.py
src/tg/utils/: crypto_str.py  parallel.py
